--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,10 +14,8 @@ services:
     image: postgres:17.0-bookworm
     volumes:
       - postgres_data:/var/lib/postgresql/data/
-    environment:
-      - POSTGRES_USER=hello_django
-      - POSTGRES_PASSWORD=hello_django
-      - POSTGRES_DB=hello_django_dev
+    env_file:
+      - ./.env.dev
 
 volumes:
   postgres_data:
